# FashionCLIP

./: .env.example  11.py  README.md  pyproject.toml
data/chroma/2385949f-5ec0-4b24-9c0e-659441549cb4/: index_metadata.pickle
scripts/: build_catalog.py  build_embeddings.py  build_vectordb.py
src/fashionclip/: config.py
src/fashionclip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fashionclip/api/: main.py
src/fashionclip/core/: agent.py  embedding.py  evaluator.py  outfit.py  retriever.py  vector_db.py
src/fashionclip/data/: catalog.py  models.py
